Fix button sizes and spacing on homepage on narrow screens
The buttons were too big, not wrapping and the map had unnecessary
padding on the sides.

--- a/static/scss/_321up.scss
+++ b/static/scss/_321up.scss
@@ -15,11 +15,14 @@
 	margin: 3px;
 }
 
-.landing-wrapper {
-	margin: 0 20px;
-	margin-left: 80px;
+.btn {
+	white-space: normal;
 }
 
-.btn-lg {
-	padding: 15px 30px;
+@media screen and (max-width: 550px) {
+	.btn-lg,
+	.btn-group-lg > .btn {
+		padding: 8px 15px;
+		font-size: 14px;
+	}
 }
